--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -1,8 +1,8 @@
 
-SUBDIRS = cs de nl ru sv it hu pl es pt fr hr fi zh_TW.Big5 sk el \
+SUBDIRS = cs de da nl ru sv it hu pl es pt fr hr fi zh_TW.Big5 sk el \
 	no zh_CN.GB2312 mk pt_BR eo
 
-APPS = kdvi kpaint kghostview
+APPS = kdvi kpaint kghostview kiconedit
 
 merge:
 	@apps='$(APPS)'; \
