--- a/po/ru/Makefile.am
+++ b/po/ru/Makefile.am
@@ -1,6 +1,6 @@
 
 # This has to be set. The rest should be reusable
-GMFILES = kpaint.gmo kghostview.gmo
+GMFILES = kpaint.gmo kghostview.gmo kiconedit.gmo
 POFILES = $(GMFILES:.gmo=.po)
 
 LANG = ru
