--- a/kiconedit/Makefile.in
+++ b/kiconedit/Makefile.in
@@ -111,6 +111,7 @@ PYTHONLIB = @PYTHONLIB@
 QT_INCLUDES = @QT_INCLUDES@
 QT_LDFLAGS = @QT_LDFLAGS@
 RANLIB = @RANLIB@
+TOPSUBDIRS = @TOPSUBDIRS@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
 XGETTEXT = @XGETTEXT@
