- Used some of the new great KToolBar features  - Started to add circular selection.

--- a/kiconedit/pics/toolbar/Attic/Makefile.am
+++ b/kiconedit/pics/toolbar/Attic/Makefile.am
@@ -12,6 +12,8 @@ toolbar_DATA =	fileclose.xpm \
 	rectangle.xpm \
 	filledrectangle.xpm \
 	areaselect.xpm \
+	selectrect.xpm \
+	selectcircle.xpm \
 	flood.xpm \
 	grid.xpm \
 	pointer.xpm \
