--- a/kiconedit/Attic/Makefile.am
+++ b/kiconedit/Attic/Makefile.am
@@ -22,7 +22,7 @@ bin_PROGRAMS = kiconedit
 kiconedit_SOURCES = utils.cpp jpeg.cpp main.cpp kiconedit.cpp kicongrid.cpp \
 	kicontools.cpp kiconcolors.cpp kcolorgrid.cpp kiconfiledlg.cpp \
 	kicon.cpp kresize.cpp knew.cpp debug.cpp properties.cpp\
-	kiconeditslots.cpp kiconconfig.cpp
+	kiconeditslots.cpp kiconconfig.cpp kdropsite.cpp kdragsource.cpp
 
 kiconedit_METASOURCES = USE_AUTOMOC
 
