Made automoc use consistent with other packages. Just "perl automoc", no automoc.in nor findperl...

--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -12,13 +12,7 @@ all:
 	echo $$mfs")" >> configure.in ;\
 	automake
 	cat configure.in.1 configure.in.2 > configure.in
-	@echo "Creating automoc"  ;\
-	./findperl ;\
-	perlpath=`cat perlbin`; \
-	echo "#!"$$perlpath > automoc ; \
-	cat automoc.in >> automoc ;\
-	chmod +x automoc
-	./automoc
+	perl automoc
 	autoconf
 	touch -r configure.in.1 configure.in
 	touch configure
@@ -41,6 +35,7 @@ dist:
 	echo $$mfs")" >> configure.in ;\
 	automake  --foreign --include-deps;\
 	cat configure.in.1 configure.in.2 > configure.in ;\
+	perl automoc ;\
 	autoconf ;\
 	touch -r configure.in.1 configure.in ;\
 	touch configure ;\
