--- a/kghostview/Makefile.am
+++ b/kghostview/Makefile.am
@@ -82,4 +82,4 @@ uninstall-local:
 	rm -f $(kde_minidir)/kghostview.xpm
 
 messages:
-	@XGETTEXT@ -C -ktranslate -ki18n -x ../../kdelibs/po/kde.pot *.cpp && mv messages.po ../po/kghostview.pot
+	$(XGETTEXT) -C -ktranslate -ki18n -x $(includedir)/kde.pot $(kghostview_SOURCES) && mv messages.po ../po/kghostview.pot
