--- a/Makefile.am
+++ b/Makefile.am
@@ -1,52 +1,29 @@
+## kdebase/Makefile.am
+## (C) 1997 Stephan Kulow
 
-# This has to be set. The rest should be reusable
-GMOFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo kview.gmo \
-	kiconedit.gmo
-POFILES = $(GMOFILES:.gmo=.po)
+AUTOMAKE_OPTIONS = foreign 
+SUBDIRS = @TOPSUBDIRS@
+DISTCLEANFILES = inst-apps
 
-LANG = fi
+install-data-local:
+	@echo ""
+	@echo ""
+	@echo ""
+	@echo "*************** Important *************************"
+	@echo ""
+	@echo " add "$(bindir)" to your PATH"
+	@echo ""
+	@echo " Please report bugs with our web form at"
+	@echo " http://buglist.kde.org."
+	@echo ""
+	@echo " Stephan Kulow <coolo@kde.org> and all the KDE"
+	@echo " developers wish you fun with the KDE."                     
+	@echo "****************************************************"
+	@echo ""
 
-localedir = $(kde_locale)
-
-GMSGFMT = @GMSGFMT@
-MSGFMT = @MSGFMT@
-DISTFILES = Makefile.am Makefile.in $(POFILES) $(GMOFILES)
-
-all: all-@USE_NLS@
-install-data-local: install-@USE_NLS@
-
-SUFFIXES = .po .gmo
-
-.po.mo:
-	$(MSGFMT) -o $@ $<
-
-.po.gmo:
-	file=$(srcdir)/`echo $* | sed 's,.*/,,'`.gmo \
-	&& rm -f $$file && $(GMSGFMT) -o $$file $< 
-
-all-yes: $(GMOFILES)
-all-no:
-
-install-yes: all
-	@catalogs='$(GMOFILES)'; \
-	for cat in $$catalogs; do \
-	destdir=$(localedir); \
-	name=`echo $$cat | sed -e 's/\.gmo/\.mo/'` \
-	dir=$$destdir/$(LANG)/LC_MESSAGES; \
-	$(mkinstalldirs) $$dir; \
-	$(INSTALL_DATA) $$cat $$dir/$$name; \
-	  echo "installing $$cat as $$dir/$$name"; \
+messages:
+	@for subdir in $(SUBDIRS); do \
+	echo "Making messages in $$subdir"; \
+	  (cd $$subdir && $(MAKE) messages) \
 	done
-
-install-no:
-
-uninstall-local:
-	@catalogs='$(GMOFILES)'; \
-	for cat in $$catalogs; do \
-	destdir=$(localedir); \
-	name=`echo $$cat | sed -e 's/\.gmo/\.mo/'` \
-	dir=$$destdir/$(LANG)/LC_MESSAGES; \
-	rm -f $$cat $$dir/$$name; \
-	echo "removing $$dir/$$name" ; \
-	done
-
+	(cd po && $(MAKE) merge)         
