--- a/kview/kimgio/Makefile.am
+++ b/kview/kimgio/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES= libkimgio.a
 
-libkimgio_a_SOURCES = jpeg.cpp xview.cpp kimgio.cpp kimgio.h eps.cpp
-noinst_HEADERS= jpeg.h jpeginc.h xview.h eps.h
+libkimgio_a_SOURCES = jpeg.cpp xview.cpp kimgio.cpp kimgio.h eps.cpp \
+		tiffr.cpp
+noinst_HEADERS= jpeg.h jpeginc.h xview.h eps.h tiffr.h
 
 INCLUDES = $(all_includes)
