--- a/kview/kimgio/Makefile.am
+++ b/kview/kimgio/Makefile.am
@@ -1,7 +1,12 @@
-noinst_LIBRARIES= libkimgio.a
+lib_LTLIBRARIES= libkimgio.la
 
-libkimgio_a_SOURCES = jpeg.cpp xview.cpp kimgio.cpp kimgio.h eps.cpp \
+libkimgio_la_LDFLAGS = -version-info 0:1
+
+libkimgio_la_SOURCES = jpeg.cpp xview.cpp kimgio.cpp kimgio.h eps.cpp \
 		tiffr.cpp
-noinst_HEADERS= jpeg.h jpeginc.h xview.h eps.h tiffr.h
+
+include_HEADERS = kimgio.h
+
+noinst_HEADERS= jpeg.h xview.h eps.h tiffr.h
 
 INCLUDES = $(all_includes)
