--- a/kiconedit/Attic/Makefile.am
+++ b/kiconedit/Attic/Makefile.am
@@ -19,9 +19,9 @@ SUBDIRS = pics doc
 
 bin_PROGRAMS = kiconedit
 
-kiconedit_SOURCES = utils.cpp jpeg.cpp main.cpp kiconedit.cpp kicongrid.cpp \
-	kicontools.cpp kiconcolors.cpp kcolorgrid.cpp kiconfiledlg.cpp kiconfileview.cpp \
-	kicon.cpp kresize.cpp knew.cpp debug.cpp properties.cpp xview.cpp \
+kiconedit_SOURCES = utils.cpp jpeg.cpp main.cpp kiconedit.cpp kicongrid.cpp kiconcolors.cpp \
+	kcolorgrid.cpp kiconfiledlg.cpp kiconcombiview.cpp kiconfileview.cpp kicondetaillist.cpp \
+	kicontools.cpp kicon.cpp kresize.cpp knew.cpp debug.cpp properties.cpp xview.cpp \
 	kiconeditslots.cpp kiconconfig.cpp kdropsite.cpp kdragsource.cpp
 
 kiconedit_METASOURCES = USE_AUTOMOC
