--- a/kview/Makefile.am
+++ b/kview/Makefile.am
@@ -6,7 +6,7 @@ CORBA_SRC=
 
 BUILT_SOURCES = moc_canvas.cpp moc_filter.cpp moc_filtmenu.cpp moc_viewer.cpp moc_ilistdlg.cpp
 
-INCLUDES = $(all_includes) -I/usr/local/mico/include -I kimgio -Ilayout
+INCLUDES = $(all_includes) -I/usr/local/mico/include -Ilayout
 kview_SOURCES = canvas.cpp kview.cpp main.cpp \
 	viewer.cpp canvas.h kview.h \
 	version.h viewer.h filter.h filter.cpp filtlist.h filtlist.cpp \
@@ -30,7 +30,7 @@ messages:
 	$(XGETTEXT) -C -ki18n -x $(includedir)/kde.pot $(kview_SOURCES) && mv messages.po ../po/kview.pot
 
 srcdoc:
-	kdoc -H -d $(HOME)/web/src/kview *.h -lqt -lkdecore -lkdeui -lkfile 
+	kdoc -H -d $(HOME)/web/src/kview kview *.h -lqt -lkdecore -lkdeui -lkfile 
 
 ###KMAKE-start (don't edit or delete this block)
 moc_canvas.cpp: canvas.h
