--- a/po/es/Makefile.am
+++ b/po/es/Makefile.am
@@ -1,6 +1,6 @@
 
 # This has to be set. The rest should be reusable
-GMOFILES = kghostview.gmo kpaint.gmo kdvi.gmo kfax.gmo
+GMOFILES = kghostview.gmo kpaint.gmo kdvi.gmo kfax.gmo kview.gmo
 POFILES = $(GMOFILES:.gmo=.po)
 
 LANG = es
