--- a/kiconedit/Attic/Makefile.am
+++ b/kiconedit/Attic/Makefile.am
@@ -28,7 +28,8 @@ kiconedit_METASOURCES = USE_AUTOMOC
 
 # the library search path. 
 kiconedit_LDFLAGS = $(all_libraries)
-kiconedit_LDADD = -lkfile -lkfm -lkdeui -lkdecore -lqt -lXext -lX11 $(LIBJPEG) $(LIBSOCKET)
+kiconedit_LDADD = -lkfile -lkfm -lkdeui -lkdecore -lkimgio \
+	-lqt -lXext -lX11 $(KIMGIO_LIBS) $(LIBJPEG) $(LIBTIFF) $(LIBSOCKET)
 
 CLEANFILES = $(kiconedit_METASOURCES)
 DISTCLEANFILES = Makefile *~ .deps/* .libs/*
