--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -26,7 +26,7 @@ all:
 
 dist:
 	@cp configure.in.1 configure.in; \
-	cat acinclude.m4.in libtool.m4.in > acinclude.m4; \
+	cat admin/acinclude.m4.in admin/libtool.m4.in > acinclude.m4
 	aclocal; \
 	autoheader; \
 	cat configure.in.1 > configure.in; \
