--- a/kiconedit/Makefile.am
+++ b/kiconedit/Makefile.am
@@ -28,8 +28,7 @@ kiconedit_METASOURCES = USE_AUTOMOC
 
 # the library search path. 
 kiconedit_LDFLAGS = $(all_libraries)
-kiconedit_LDADD = -lkfile -lkfm -lkdeui -lkdecore -lkimgio \
-	-lqt -lXext -lX11 $(KIMGIO_LIBS) $(LIBSOCKET)
+kiconedit_LDADD = -lkfile -lkfm $(LIB_KIMGIO) $(LIB_KDEUI)
 
 CLEANFILES = $(kiconedit_METASOURCES)
 DISTCLEANFILES = Makefile *~ .deps/* .libs/*
