--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -2,7 +2,7 @@
 SUBDIRS = cs de da nl ru sv it hu pl es pt fr hr fi zh_TW.Big5 sk el \
 	no zh_CN.GB2312 mk pt_BR eo
 
-APPS = kdvi kfax kghostview kiconedit kpaint kview kfract
+APPS = kdvi kfax kghostview kiconedit kpaint kview kfract ksnapshot
 
 merge:
 	@apps='$(APPS)'; \
