--- a/kpaint/Makefile.am
+++ b/kpaint/Makefile.am
@@ -1,9 +1,15 @@
 # $Id$
 ##
 
+# my developement libraries
+my_libraries=/home/joerg/kde/kdelibs/lib
+my_includes=/home/joerg/kde/kdelibs/include
+
 INCLUDES=	$(all_includes)
+#INCLUDES= -I$(my_includes) $(X_INCLUDES) $(QT_INCLUDES)
 LDFLAGS	=	$(all_libraries) $(KDE_RPATH)
-LDADD	=	-lkfile -lkfm -lkdeui -lkdecore $(LIB_KIMGIO) -lgif -lqt -lXext -lX11 -lm $(LIBSOCKET)
+#LDFLAGS = -L$(my_libraries) -L$(x_libraries) -rpath $(my_libraries) -rpath $(x_libraries)
+LDADD	= -lkfile -lkfm -lkdeui -lkdecore -lkimgio -lgif -ljpeg -lqt -lXext -lX11 -lm $(LIBSOCKET)
 
 
 appsdir = $(kde_appsdir)/Graphics
@@ -18,19 +24,19 @@ kpaint_SOURCES = main.cpp app.cpp canvas.cpp kpaint.cpp manager.cpp \
 	QwViewport.cpp tool.cpp ellipse.cpp circle.cpp line.cpp \
 	spraycan.cpp rectangle.cpp pen.cpp areaselect.cpp depthdialog.cpp \
 	roundangle.cpp navwidget.cpp sidebar.cpp view.cpp colorbar.cpp \
-	mainview.cpp
+	mainview.cpp text.cpp
 
 noinst_HEADERS = QwViewport.h areaselect.h canvas.h canvassize.h circle.h \
 	depthdialog.h ellipse.h formatdialog.h formats.h gif.h infodialog.h \
 	kpaint.h kundo.h line.h main.h manager.h navwidget.h palette.h \
 	palettedialog.h pen.h properties.h rectangle.h roundangle.h sidebar.h \
-	spraycan.h tool.h version.h view.h colorbar.h mainview.h
+	spraycan.h tool.h version.h view.h colorbar.h mainview.h text.h
 
 DISTCLEANFILES = canvas.moc app.moc kpaint.moc manager.moc infodialog.moc \
 	depthdialog.moc properties.moc formatdialog.moc palette.moc \
 	palettedialog.moc QwViewport.moc tool.moc spraycan.moc circle.moc \
 	navwidget.moc sidebar.moc view.moc rectangle.moc roundangle.moc \
-	pen.moc ellipse.moc colorbar.moc mainview.moc areaselect.moc
+	pen.moc ellipse.moc colorbar.moc mainview.moc areaselect.moc text.moc
 
 bin_PROGRAMS = kpaint
 
@@ -148,3 +154,7 @@ mainview.moc: mainview.h
 areaselect.cpp: areaselect.moc
 areaselect.moc: areaselect.h
 	$(MOC) areaselect.h -o areaselect.moc
+
+text.cpp:text.moc
+text.moc: text.h
+	$(MOC) text.h -o text.moc
