some more Makefile changes

--- a/kfax/Makefile.am
+++ b/kfax/Makefile.am
@@ -1,8 +1,8 @@
 # $Id$
 
-LDFLAGS	=	$(all_libraries)
-LDADD   =       -lkfile -lkfm -lkdeui -lkdecore -lqt -lXext -lX11 ./libtiffax/libtif.a  -lm $(LIBSOCKET) $(KDE_RPATH)
-INCLUDES=	-I./libtiffax $(all_includes) 
+LDFLAGS	=	$(all_libraries) $(KDE_RPATH)
+LDADD   =       -lkfile -lkfm -lkdeui -lkdecore -lqt -lXext -lX11 ./libtiffax/libtif.a  -lm $(LIBSOCKET) 
+INCLUDES=	-I./libtiffax $(all_includes)
 
 ####### Files
 noinst_HEADERS = kfax.h faxexpand.h print.h options.h urldlg.h
