--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -2,6 +2,13 @@ all:
 	@echo "This Makefile is only for the CVS repository"
 	@echo "I will delete it before making the distribution"
 	@echo ""
+	@if test ! -d admin; then \
+	   echo "Please recheckout this module!" ;\
+	   echo "for cvs: use checkout once and after that update again" ;\
+	   echo "for cvsup: checkout kde-common from cvsup and" ;\
+	   echo "   link kde-common/admin to ./admin" ;\
+	   exit 1 ;\
+	fi
 	cat admin/acinclude.m4.in admin/libtool.m4.in > acinclude.m4
 	cp configure.in.1 configure.in
 	aclocal
@@ -17,7 +24,7 @@ all:
 	touch -r configure.in.1 configure.in
 	touch configure
 	touch stamp-h.in
-	rm -f ./SUBDIRS 
+	rm -f ./SUBDIRS
 	files=`ls -1`; \
 	dirs=`for i in $$files; do if test -d $$i; then echo $$i; fi; done`; \
 	for i in $$dirs; do \
@@ -26,7 +33,7 @@ all:
 
 dist:
 	@cp configure.in.1 configure.in; \
-	cat admin/acinclude.m4.in admin/libtool.m4.in > acinclude.m4
+	cat admin/acinclude.m4.in admin/libtool.m4.in > acinclude.m4; \
 	aclocal; \
 	autoheader; \
 	cat configure.in.1 > configure.in; \
