--- a/po/de/Makefile.am
+++ b/po/de/Makefile.am
@@ -1,6 +1,8 @@
 
 # This has to be set. The rest should be reusable
-GMOFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo kiconedit.gmo kview.gmo
+GMOFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo kiconedit.gmo kview.gmo \
+	kfract.gmo ksnapshot.gmo
+
 POFILES = $(GMOFILES:.gmo=.po)
 
 LANG = de
