--- a/Makefile.am
+++ b/Makefile.am
@@ -22,8 +22,27 @@ install-data-local:
 	@echo ""
 
 messages:
-	@for subdir in $(SUBDIRS); do \
-	echo "Making messages in $$subdir"; \
-	  (cd $$subdir && $(MAKE) messages) \
+	rm -rf po.backup
+	mkdir po.backup
+	for i in `ls -1 po/*.pot | sed -e "s#po/##"`; do \
+	  grep -v "\"POT-Creation" po/$$i > po.backup/$$i ; \
+	  cp po/$$i po.backup/backup_$$i ;  \
 	done
-	(cd po && $(MAKE) merge)         
+	files=`ls -1`; \
+	dirs=`for i in $$files; do if test -d $$i && test -r $$i/Makefile.am; then echo $$i; fi; done`; \
+	for subdir in $$dirs; do \
+	  echo "Making messages in $$subdir"; \
+	  (cd $$subdir && $(MAKE) -f Makefile.am messages) \
+	done
+	for  i in `ls -1 po/*.pot | sed -e "s#po/##"`; do \
+	  grep -v "POT-Creation-Date:" po/$$i > temp.pot ;\
+	  if diff -q temp.pot po.backup/$$i; then \
+	     echo "I'm restoring $$i" ;\
+	     mv po.backup/backup_$$i po/$$i; \
+	   else \
+	     echo "will leave $$i"; \
+	fi ;\
+	done
+	rm -f temp.pot
+	rm -rf po.backup
+	(cd po && $(MAKE) -f Makefile.am merge)
