"someone" commited uncompilable changes :)

--- a/po/tr/Makefile.am
+++ b/po/tr/Makefile.am
@@ -1,7 +1,6 @@
 
 # This has to be set. The rest should be reusable
-GMOFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo kiconedit.gmo kview.gmo \
-	kfract.gmo ksnapshot.gmo
+GMOFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo 
 
 POFILES = $(GMOFILES:.gmo=.po)
 
