CVS_SILENT: replaced -lqt with $(LIB_QT). Will continue to move to the aliases, but a Makefile without -lqt is cool enough to commit ;)

--- a/kfax/Makefile.am
+++ b/kfax/Makefile.am
@@ -1,7 +1,7 @@
 # $Id$
 
 LDFLAGS	=	$(all_libraries) $(KDE_RPATH)
-LDADD   =       -lkfile -lkfm -lkdeui -lkdecore -lqt -lXext -lX11 ./libtiffax/libtif.a  -lm $(LIBSOCKET) 
+LDADD   =       -lkfile -lkfm -lkdeui -lkdecore  -lXext  ./libtiffax/libtif.a  -lm $(LIB_QT) 
 INCLUDES=	-I./libtiffax $(all_includes)
 
 ####### Files
