--- a/kview/Makefile.am
+++ b/kview/Makefile.am
@@ -20,8 +20,7 @@ lnk_DATA = kview.kdelnk
 EXTRA_DIST = $(lnk_DATA)
 
 kview_LDFLAGS = $(all_libraries) $(KDE_RPATH)
-kview_LDADD = layout/liblayout.a \
-	-lkfile -lkfm $(LIB_KIMGIO) $(LIB_KDEUI)
+kview_LDADD = layout/liblayout.a $(LIB_KFILE) $(LIB_KIMGIO) 
 
 messages:
 	$(XGETTEXT) -C -ki18n -x $(includedir)/kde.pot $(kview_SOURCES) && mv messages.po ../po/kview.pot
