--- a/po/ru/Makefile.am
+++ b/po/ru/Makefile.am
@@ -1,6 +1,8 @@
 
 # This has to be set. The rest should be reusable
-GMOFILES = kpaint.gmo kghostview.gmo kiconedit.gmo kdvi.gmo kfax.gmo
+GMOFILES = kdvi.gmo kfax.gmo kfract.gmo kghostview.gmo kiconedit.gmo \
+	kpaint.gmo ksnapshot.gmo kview.gmo
+
 POFILES = $(GMOFILES:.gmo=.po)
 
 LANG = ru
