--- a/kiconedit/Attic/Makefile.am
+++ b/kiconedit/Attic/Makefile.am
@@ -27,7 +27,7 @@ kiconedit_SOURCES = utils.cpp main.cpp kiconedit.cpp kicongrid.cpp kiconcolors.c
 kiconedit_METASOURCES = USE_AUTOMOC
 
 # the library search path. 
-kiconedit_LDFLAGS = $(all_libraries)
+kiconedit_LDFLAGS = $(all_libraries) $(KDE_RPATH)
 kiconedit_LDADD =   $(LIB_KIMGIO) $(LIB_KFILE)
 
 CLEANFILES = $(kiconedit_METASOURCES)
