Fixes some i18n() problems.

--- a/kfax/Makefile.am
+++ b/kfax/Makefile.am
@@ -33,7 +33,7 @@ install-data-local: mini-kfax.xpm
 	$(INSTALL_DATA)  mini-kfax.xpm $(kde_minidir)/kfax.xpm
 
 messages:
-	$(XGETTEXT) -C -ki18n -x $(includedir)/kde.pot $(kfax_SOURCES) && mv messages.po ../po/kfax.pot
+	$(XGETTEXT) -C -ki18n -x $(includedir)/kde.pot $(kfax_SOURCES) printer.h && mv messages.po ../po/kfax.pot
 
 uninstall:
 	rm -f $(kde_minidir)/kfax.xpm
