--- a/po/pl/Makefile.am
+++ b/po/pl/Makefile.am
@@ -1,7 +1,7 @@
 
 # This has to be set. The rest should be reusable
 GMOFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo kiconedit.gmo \
-	ksnapshot.gmo
+	ksnapshot.gmo kfract.gmo kview.gmo
 POFILES = $(GMOFILES:.gmo=.po)
 
 LANG = pl
