--- a/kfax/Makefile.am
+++ b/kfax/Makefile.am
@@ -1,8 +1,8 @@
 # $Id$
 
 LDFLAGS	=	$(all_libraries) $(KDE_RPATH)
-LDADD   =               ./libtiffax/libtif.a  -lm $(LIB_KFILE) 
-INCLUDES=	-I./libtiffax $(all_includes)
+LDADD   =       ./libtiffax/libtif.a  -lm $(LIB_KFILE) 
+INCLUDES=	-I$(srcdir)/libtiffax $(all_includes)
 
 ####### Files
 noinst_HEADERS = kfax.h faxexpand.h print.h options.h urldlg.h
@@ -10,8 +10,7 @@ noinst_HEADERS = kfax.h faxexpand.h print.h options.h urldlg.h
 kfax_SOURCES   = kfax.cpp viewfax.cpp faxexpand.cpp faxinit.cpp faxinput.cpp\
 		 fax2tiff.c fax2ps.c print.cpp options.cpp urldlg.cpp
 
-SRCMETA	       = kfax.moc print.moc options.moc urldlg.moc
-DISTCLEANFILES = $(SRCMETA)
+METASOURCES    = kfax.moc print.moc options.moc urldlg.moc
 
 bin_PROGRAMS   = kfax
 
@@ -30,41 +29,14 @@ EXTRA_DIST = $(apps_DATA) $(pics_DATA) $(icon_DATA) mini-kfax.xpm
 
 install-data-local: mini-kfax.xpm
 	$(mkinstalldirs) $(kde_minidir)
-	$(INSTALL_DATA)  mini-kfax.xpm $(kde_minidir)/kfax.xpm
+	$(INSTALL_DATA) $(srcdir)/mini-kfax.xpm $(kde_minidir)/kfax.xpm
 
 messages:
 	$(XGETTEXT) -C -ki18n -x $(includedir)/kde.pot $(kfax_SOURCES) printer.h && mv messages.po ../po/kfax.pot
 
-uninstall:
+uninstall-local:
 	rm -f $(kde_minidir)/kfax.xpm
 
 ####### Explicit dependencies
-
-
-####### Meta objects
-
-kfax.cpp: kfax.moc
-kfax.moc: kfax.h
-	$(MOC) kfax.h -o kfax.moc
-
-
-print.cpp: print.moc
-print.moc: print.h
-	$(MOC) print.h -o print.moc
-
-urldlg.cpp: urldlg.moc
-urldlg.moc: urldlg.h
-	$(MOC) urldlg.h -o urldlg.moc
-
-options.cpp: options.moc
-options.moc: options.h
-	$(MOC) options.h -o options.moc
-
-
-
-
-
-
-
 
 
